shops/102063/blocks/menu/menu.css
span.arrow {
    padding-left: 10px;
}

#home > div > div > div.custom_section {
    overflow: hidden;
}

#home > div > header > div.navigation-wrapper > div > nav > ul > li:nth-child(1) > i {
    display: none;
}

.sf-menu>.flexy.has_children {
    padding-left: 0px;
}

.widget.shop-categories ul .arrow, .widget.side-categories ul .arrow {
    margin-right: 10px;
}

.widget.shop-categories ul ul.children a, .widget.side-categories ul ul.children a {
    margin-left: 30px;
    font-weight: 500;
}

#sidebar > div > div > ul > li:nth-child(5) {
    margin-left: 8px;
}

#sidebar > div > div > ul > li:nth-child(6) {
    display: none;
}

#sidebar > div > div > ul > li:nth-child(7) {
    display: none;
}

.row.products.grid {
    padding-top: 20px;
}

#home > div > header > div.navigation-wrapper > div:nth-child(1) {
    color: white;
    position: relative;
    font-size: 14px;
    font-weight: 600;
    z-index: 996;
    font-family: 'Open Sans', sans-serif;
    top: 0px;
    left: 0px;
 }

 #home > div > header > div.navigation-wrapper > div:nth-child(1) > a {
     color: white;
 }

 #home > div > header > div.navigation-wrapper > div:nth-child(1) > a:hover {
    color: white;
}

body.ltr .sf-menu ul {
    overflow-y: overlay;
    height: 400px;
}

#home > div.wrapper.wrapper-closed > header > div.top-bar > div > div > div.col-8.col-lg-5.order-1 > div > ul > li:nth-child(1) > a:nth-child(1):hover {
    border-bottom: 1px solid black;
}

.closer {
    color: white;
    background: #ff00006e;
    width: fit-content;
    padding-left: 10px;
    padding-right: 10px;
}

.out-container {
    justify-content: center;
}
.whats {
    margin-top: 10%;
}

h3.img-inner_title {
    text-align: center;
}

.sf-menu li:hover, .sf-menu.nav>li>a:focus, .sf-menu.nav>li>a:hover {
    background: rgb(0 141 234) !important;
}

.sf-menu ul {
    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 0%);
}

#home > div.wrapper.wrapper-closed > header > div.top-bar > div > div > div.col-8.col-lg-5.order-1 > div > ul > li:nth-child(1) > a:nth-child(1):hover {
    cursor: pointer;
}

#home > div.out-container > div > div {
    cursor: pointer;
}

#sidebar > div > div > ul > li:nth-child(12) {
    display: none;
}

#sidebar > div > div > ul > li:nth-child(13) {
    display: none;
}

#sidebar > div > div > ul > li:nth-child(5) {
    margin-left: 0px;
}

#sidebar > div > div > ul > li.active {
    display: none;
}


.inner-whats {
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between
}

#home > div.out-container > div > div > div {
    height: 26px;
}

#msg {
    text-align: left !important;
    border-bottom: 0px;
    background: #ececec;
    height: 50px;
}

#number {
    text-align: left !important;
    border-bottom: 0px;
    background: #ececec;
    height: 50px;
}

#home > div.out-container > div > button {
    width: 30%;
    height: 40px
}

#home > div.out-container > div > div.inner-whats > h3 {
    cursor: text;
}

#home > div.out-container > div > div:nth-child(2) {
    cursor: text;
}

#home > div.out-container > div > div:nth-child(4) {
    cursor: text;
}

#home > div.out-container > div > div.inner-whats {
    cursor: default;
}

#home > div.out-container > div > div.inner-whats > div {
    cursor: pointer;
}

@media (max-device-width: 480px) {
    label.placeholder {
     font-size: 9px !important;  
    }
}

